--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -11,6 +11,7 @@
     <packaging>jar</packaging>
 
     <name>notification</name>
+    <version>mine</version>
     <url>http://maven.apache.org</url>
 
     <properties>
