--- a/product/pom.xml
+++ b/product/pom.xml
@@ -11,6 +11,7 @@
     <packaging>jar</packaging>
 
     <name>product</name>
+    <version>mine</version>
     <url>http://maven.apache.org</url>
 
     <dependencies>
