--- a/product/src/main/resources/application.yaml
+++ b/product/src/main/resources/application.yaml
@@ -17,3 +17,7 @@ eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+
+rabbitmq:
+  exchange: product-exchange
+  routing-key: product.notification.routing-key
