--- a/notification/pom.xml
+++ b/notification/pom.xml
@@ -37,15 +37,23 @@
         </dependency>
 
         <!--todo: rabbitMQ-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-amqp</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>ir.digixo</groupId>-->
+<!--            <artifactId>amqp</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
+
+<!--        todo: kafka-->
         <dependency>
             <groupId>ir.digixo</groupId>
-            <artifactId>amqp</artifactId>
+            <artifactId>kafka</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
         <dependency>
             <groupId>ir.digixo</groupId>
             <artifactId>client</artifactId>
