--- a/product/pom.xml
+++ b/product/pom.xml
@@ -45,13 +45,20 @@
         </dependency>
 
         <!--todo: rabbitMQ-->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-amqp</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-amqp</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>ir.digixo</groupId>-->
+<!--            <artifactId>amqp</artifactId>-->
+<!--            <version>1.0-SNAPSHOT</version>-->
+<!--        </dependency>-->
+
+<!--        todo: kafka-->
         <dependency>
             <groupId>ir.digixo</groupId>
-            <artifactId>amqp</artifactId>
+            <artifactId>kafka</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
