--- a/product/pom.xml
+++ b/product/pom.xml
@@ -62,6 +62,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <!--todo:circuit breaker-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-circuitbreaker-resilience4j</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>ir.digixo</groupId>
             <artifactId>client</artifactId>
